# code-context-graph

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
ccg/: __init__.py  agent.py  collector.py  graph.py  manifest.py  parser.py  reranker.py  runner.py  server.py  shadow_index.py  vector_store.py  watcher.py
docs/: FLOWCHARTS.md  INGESTION_SEARCH_AND_WATCHER.md
postman/: CCG-API.postman_collection.json
