[project]
name = "ccg"
version = "0.1.0"
description = "Code Context Graph — production-grade code indexing and search with two-stage retrieval and graph-augmented RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "tree-sitter>=0.20.0,<0.22.0",
    "tree-sitter-languages>=1.8.0",
    "sentence-transformers>=2.2.0",
    "FlagEmbedding>=1.2.0",
    "qdrant-client>=1.7.0",
    "networkx>=3.0",
    "openai>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ccg"]
[tool.hatch.build.targets.sdist]
include = ["ccg", "main.py", "README.md"]
